# PixelAgentsDesktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  E2E_TESTING.md  MULTI_WINDOW.md  RELEASING.md  SIGNING.md
scripts/: build-sidecar.mjs  prepare-release.mjs  regenerate-icons.mjs
shared/: formatToolStatus.ts  protocol.ts
sidecar/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
sidecar/src/: agentTracker.ts  bridge.ts  connection.ts  ipcProtocol.ts  main.ts  parser.ts  perfMark.ts  scanner.ts  terminalRelay.ts
src/: App.tsx  main.tsx  styles.css  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diagnostics.rs  ipc.rs  lib.rs  main.rs  menu.rs  secret_store.rs  sidecar.rs  state.rs  tray.rs
src/components/: AgentCard.tsx  AgentDetailsDrawer.tsx  AgentList.tsx  ErrorBoundary.tsx  (+7 more)
tests/: AgentCard.test.tsx  LogViewer.test.tsx  LoginView.test.tsx  NoticeBanner.test.tsx  SettingsView.test.tsx  StatusBar.test.tsx  agentStore.test.ts  i18n.test.ts  keyboardNav.test.tsx  logStore.test.ts  parser.test.ts  scanner-projectname.test.ts  settingsSchema.test.ts  sidecar-agentTracker.test.ts  sidecar-bridge.test.ts  sidecar-ipc.test.ts  validators.test.ts
(+16 files in other folders)
